# flowbit

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md
src/: cache.rs  config.rs  logging.rs  main.rs
src/api/: client.rs  queries.rs  types.rs
src/model/: filter.rs  mod.rs  project_item.rs
