[package]
name = "flowbit"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.28"
octocrab = "0.49"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
open = "5"
unicode-width = "0.2"
